Update for assignment 2